# Personal-KnowledgeBase

./: .dockerignore  .env.example  .gitignore  DELIVERY-GUIDE.md  DEPLOYMENT.md  README.md  README_CN.md  build-delivery.sh  docker-compose.yml  latest.json  load-and-run.sh  package-delivery.sh  restart-backend.sh  start-dev.sh  start-web.sh  start.sh
.github/workflows/: build-release.yml
backend-springboot/: Dockerfile  pom.xml  test_docfile_fix.sh
backend-springboot/src/main/resources/: application.properties  schema-v2.sql
docs/: TECH_STACK.md  api-reference.md  architecture.md  changelog.md  design.md  usage.md
docs/sprint-2/: plan.md
docs/superpowers/specs/: 2026-07-08-fix-ocr-table-to-markdown-design.md
frontend-vue/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-vue/src/: App.vue  style.css
frontend-vue/src/__tests__/: wiki-list.test.ts
frontend-vue/src/api/: index.ts
frontend-vue/src/components/: BackendStatus.vue  DocLibrary.vue  ErrorBoundary.vue  FirstRunWizard.vue  HeroBanner.vue  SkeletonLoader.vue  SplashScreen.vue  UpdateDialog.vue  WikiDetailDialog.vue  WikiEntries.vue
frontend-vue/src/composables/: useBackend.ts  useTauri.ts
frontend-vue/src/utils/: errorBus.ts  libraryLabels.ts  platform.ts  previewFormatting.ts
frontend-vue/src/views/admin/: AdminLayout.vue  Charts.vue  KG.vue  (+7 more)
init-db/: 00-create-db.sql  01-schema.sql  02-init-data.sql  03-performance-indexes.sql
parser-service/: parse_document.py  requirements.txt
scripts/: build-all.sh  build-linux.sh  build-macos.sh  build-windows.ps1  check_opd_orphans.py  delete_opd_orphans.py  generate-latest-json.sh  generate_icon.py
src-tauri/: Cargo.toml  latest.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: java-backend-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sidecar.rs  tray.rs
tests/: test_desktop_endpoints.py  test_mysql_integration.py  test_platform.py
(+58 files in other folders)
