[package]
name = "intelligence-platform"
version = "1.1.0"
description = "无人信息领域智能情报分析平台"
authors = []
edition = "2021"

[lib]
name = "intelligence_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "intelligence-platform"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "unwind"
strip = true
